hive-macro/tests/macro/hive_test/should_fail/function_syntax.rs
#[hive_macro::hive_test]
enum Enum {}

fn main() {}
