hive-macro/tests/macro/hive_test/should_fail/function_syntax.stderr
error: Failed to parse testfunction
 --> tests/macro/hive_test/should_fail/function_syntax.rs:2:1
  |
2 | enum Enum {}
  | ^^^^
  |
  = help: This macro can only be applied to a Hive testfunction, see the example below.
  = note: example: fn my_fancy_test(test_channel: &mut dyn TestChannelHandle, session: &mut Session, target_info: &HiveTargetInfo, defines: &DefineRegistry);
